# archible

./: .ansible-lint.yml  .gitignore  LICENSE  README.md  ansible.cfg  playbook.yaml  playbook.yml  pull.yml  test.yml
connection_plugins/: nspawn.py
filter_plugins/: extras.py
inventories/: example.yml  main.yaml  main.yml
inventories/group_vars/: all.yaml  all.yml
inventories/group_vars/all/: 01-common.yml  02-machine.yml  03-devices.yml  04-users.yml  05-security.yml  06-look.yml  07-apps.yml  07-dev.yml  08-apps.yml  09-cleanup.yml  99-env.yml  aa-global.yml  ba-prelude.yml  ca-catalyst.yml  da-apex-prep.yml  ea-apex-system.yml  fa-apex-user.yml  ga-apex-desktop.yml  ha-apex-env.yml
inventories/group_vars/example/: aa-global.yml  ba-prelude.yml  ca-catalyst.yml  da-apex-prep.yml  ea-apex-system.yml  fa-apex-user.yml  ga-apex-desktop.yml  ha-apex-env.yml  ia-apex-apps.yml
plugins/action/: common_global_env.py  common_install.py  common_kernel_cmdline.py  common_packages.py  common_persist_export.py  common_persist_import.py  common_services.py  common_template_plus.py  common_url_unpack.py  common_version_manager.py
plugins/connection/: nspawn.py
plugins/filter/: binds.py  collections.py  indent.py  misc.py
plugins/lookup/: common_install_targets.py  common_persist.py  is_tagged.py  user_layout.py  user_layouts.py
roles/apps/: main.yml
roles/apps-browsers/defaults/: main.yml
roles/apps-browsers/lookup_plugins/: chromium_process_profiles.py
roles/dev/files/cmake/: CMakeLists.txt  CMakeUserPresets.json
support/: morph-playbook.py  test.yml
(+539 files in other folders)
